<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.home.HomeFragment">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/fromTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:text="@string/from_txt"
            android:textColor="@color/black"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/fromContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fromTxt"
            app:layout_constraintWidth_percent=".3">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/currency_txt"
                app:boxStrokeColor="@color/currency_green"
                app:endIconTint="@color/currency_green"
                app:hintTextColor="@color/currency_green">

                <AutoCompleteTextView
                    android:id="@+id/fromAutoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:text="@string/usd_txt"
                    tools:ignore="LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fromAmountTextInputLayout"
                style="@style/TextInputOutlineLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_weight="1"
                android:hint="@string/enter_amount_txt"
                android:paddingHorizontal="4dp"
                android:paddingVertical="4dp"
                app:hintTextColor="@color/currency_green">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fromAmountEditText"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:text="@string/_1_for_default" />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/toTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:text="To"
            android:textColor="@color/black"
            android:textSize="@dimen/_22ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/swapBtn"
            style="@style/MaterialButtonOutlineStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Swap"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/fromContainer"
            app:layout_constraintEnd_toStartOf="@id/toContainer"
            app:layout_constraintStart_toEndOf="@id/fromContainer"
            app:layout_constraintTop_toTopOf="@id/fromContainer" />

        <LinearLayout
            android:id="@+id/toContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/swapBtn"
            app:layout_constraintTop_toBottomOf="@id/toTxt"
            app:layout_constraintWidth_percent=".3">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Currency"
                app:boxStrokeColor="@color/currency_green"
                app:endIconTint="@color/currency_green"
                app:hintTextColor="@color/currency_green">

                <AutoCompleteTextView
                    android:id="@+id/toAutoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:text="EGP"
                    tools:ignore="LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/toAmountTextInputLayout"
                style="@style/TextInputOutlineLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_weight="1"
                android:hint="Amount"
                android:paddingHorizontal="4dp"
                android:paddingVertical="4dp"
                app:hintTextColor="@color/currency_green">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/toAmountEditText"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:enabled="false"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    tools:text="@tools:sample/first_names" />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/lastUpdateTimeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_50sdp"
            tools:text="From"
            android:textColor="@color/currency_green"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fromContainer"

            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>